--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  },
+  "name": "learn-nodejs",
+  "description": "NODEJS",
+  "version": "1.0.0",
+  "main": "app/config.js",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app",
+    "dev": "nodemon"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
