--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "NODEJS",
   "version": "1.0.0",
   "main": "app/config.js",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
